# cuvis-ai-core

./: .gitignore  .secrets.baseline  CHANGELOG.md  CLAUDE.md  README.md  TODOS.md  changelog.md  codecov.yml  pyproject.toml  pytest.ini  test_collection.txt
.githooks/: pre-push
.github/: dependabot.yml
.github/workflows/: ci.yml  dep_compat.yml  pypi-release.yml
configs/data/: lentils.yaml
configs/pipeline/: gradient_based.pt  gradient_based.yaml  statistical_based.yaml
configs/plugins/: cuvis_ai_test_nodes.yaml
configs/training/: default.yaml
configs/trainrun/: gradient_based.yaml  statistical_based.yaml
cuvis_ai_core/: __init__.py
cuvis_ai_core/data/: __init__.py  coco_labels.py  datamodule.py  datasets.py  model_weights.py  public_datasets.py  rle.py  selectors.py  splits_io.py  video.py
cuvis_ai_core/deciders/: base_decider.py
cuvis_ai_core/grpc/: __init__.py  callbacks.py  config_service.py  discovery_service.py  error_handling.py  health.py  helpers.py  inference_service.py  introspection_service.py  orchestrator_bridge.py  pipeline_service.py  plugin_service.py  production_server.py  profiling_service.py  service.py  session_manager.py  session_service.py  splits_service.py  training_service.py  trainrun_service.py
cuvis_ai_core/node/: __init__.py  huggingface.py  node.py
cuvis_ai_core/orchestrator/: __init__.py  cache_key.py  catalog.py  composer.py  model_cache.py  plugin_capabilities.py  runtime_project.py  spawner.py  uv_runner.py  venv_paths.py
cuvis_ai_core/pipeline/: __init__.py  _metadata_warnings.py  config_visualizer.py  factory.py  pipeline.py  ports.py  profiling.py  restore_preinstalled.py  validator.py  visualizer.py
cuvis_ai_core/run_runtime/: __init__.py  __main__.py  service.py
cuvis_ai_core/training/: __init__.py  callback_factory.py  config.py  datamodule.py  optimizer_registry.py  predictor.py  trainers.py
cuvis_ai_core/utils/: __init__.py  config_helpers.py  general.py  git_and_os.py  graph_helper.py  icon_helpers.py  node_registry.py  plugin_config.py  plugin_fixer.py  plugin_resolver.py  provision.py  restore.py  serializer.py  types.py
docs/: grpc_plugin_api.md  plugins.md
examples/: cuvisnext_train_flow.py  grpc_plugin_management_client.py
scripts/: audit_plugin_deps.py  emit_metadata.py  provision.py
tests/: README.md  __init__.py  conftest.py  test_fixtures_smoke.py  test_imports.py  test_node_autocomplete.py  test_node_hparams.py  test_schema_roundtrips.py
tests/anomaly/: test_deep_svdd.py  test_deepsvdd_serialization.py  test_lad_detector.py
tests/config/: test_json_schema.py  test_pydantic_models.py
tests/data/: test_base_datamodule.py  test_coco_labels.py  test_datamodule_predict.py  test_datasets_coverage.py  test_exports.py  test_model_weights.py  test_public_datasets.py  test_rle.py  test_samples_per_frame.py  test_selectors.py  test_selectors_props.py  test_splits_io_props.py  test_video.py
tests/deciders/: __init__.py  test_base_decider.py  test_quantile_binary_decider.py  test_two_stage_decider.py
tests/fixtures/: __init__.py  basic_nodes.py  basic_pipelines.py  config_factory.py  data_factory.py  fake_data_modules.py  grpc.py  mock_models.py  mock_nodes.py  mock_sdk.py  paths.py  registry_test_nodes.py  restore_doubles.py  sample_metrics.py  sessions.py  workflow_fixtures.py
tests/grpc_api/: test_advanced_features.py  test_config_preservation.py  test_end_to_end_workflows.py  test_error_handling.py  test_experiment_management.py  test_file_resolution.py  test_gradient_training.py  test_grpc_proto_contract.py  test_helpers.py  test_hydra_composition.py  test_inference_service_extra_inputs.py  test_inference_service_unit.py  test_introspection.py  test_orchestrator_bridge.py  test_performance.py  test_pipeline_builder.py  test_pipeline_discovery.py  test_pipeline_management.py  test_pipeline_service_plugins.py  test_plugin_management.py  test_plugin_service.py  test_production_server.py  test_profiling_service.py  test_progress_callbacks.py  test_proto_converters.py  test_proto_generation.py  test_service.py  test_service_basic.py  test_service_delegation.py  test_service_error_paths.py  test_session_isolation.py  test_session_manager.py  test_splits_service.py  test_statistical_training.py  test_train_cancellation.py  test_trainrun_service.py
tests/integration/: test_4step_workflow.py  test_config_resolution.py  test_dependencies_compatibility.py  test_error_cases.py  test_list_nodes_without_install.py  test_pipeline_precedence.py  test_plugin_session_isolation.py  test_pydantic_integration.py  test_sandbox_seams.py  test_search_paths.py  test_typed_io_integration.py  test_weight_loading.py
tests/node/: test_node_autocomplete.py  test_node_metadata.py  test_node_registry.py  test_node_registry_session.py  test_node_serialization.py  test_plugin_system.py  test_trainable_buffers.py
tests/node_registry/: __init__.py  test_node_registry.py
tests/orchestrator/: test_cache_key.py  test_cache_key_props.py  test_catalog.py  test_composer.py  test_data_module_extras.py  test_model_cache.py  test_plugin_capabilities.py  test_runtime_project.py  test_spawner.py  test_uv_runner.py  test_venv_paths.py
tests/pipeline/: test_config_visualizer.py  test_graph_connections.py  test_graph_routing.py  test_graph_wiring.py  test_metadata_warnings.py  test_node_ports.py  test_node_state_serialization.py  test_pipeline_introspection.py  test_pipeline_profiling.py  test_ports.py  test_profiling_stats.py  test_restore_preinstalled.py  test_runtime_io_validation.py  test_unique_node_names.py  test_variadic_fanin.py  test_visualizer.py  test_yaml_loading.py
tests/preprocessors/: __init__.py  test_bandpass.py
tests/proto/: test_proto_consistency.py
tests/run_runtime/: test_main.py  test_service.py
tests/scripts/: test_audit_plugin_deps.py  test_emit_metadata.py
tests/stress/: __init__.py  synthetic_data.py  test_gpu_stress.py  test_performance.py  test_pipeline_stress.py
tests/training/: __init__.py  test_config.py  test_drcnn_adaclip_trainrun.py  test_graph_train.py  (+7 more)
tools/: emit_metadata.py
(+18 files in other folders)
