[build-system]
requires = ["setuptools>=64", "setuptools-scm>=8"]
build-backend = "setuptools.build_meta"

[project]
name = "cuvis-ai-core"
dynamic = ["version"]
description = "Cuvis-AI Core Framework"
authors = [
    {name = "Cubert GmbH", email = "cuvis.ai@cubert-gmbh.com"}
]
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.11,<3.12"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: Pydantic",
    "Framework :: Pydantic :: 2",
    "Typing :: Typed",
    "Operating System :: OS Independent",
]

dependencies = [
    "cuvis>=3.5.0",
    "cuvis-ai-schemas>=0.1.0",
    # Core framework dependencies
    "torch>=2.9.1",
    "torchvision",
    "pytorch-lightning>=2.6.0",
    # Configuration and orchestration
    "hydra-core>=1.3.0",
    "omegaconf>=2.3.0",
    # gRPC and communication
    "grpcio>=1.56.0",
    "protobuf>=6.33.4",
    "grpcio-health-checking>=1.56.0",
    # Utilities and logging
    "loguru>=0.7.0",
    "pyyaml>=6.0",
    "numpy>=1.21.0",
    "pillow>=9.0.0",
    "gitpython>=3.1.40",
    # Type hints and validation
    "typing-extensions>=4.0.0",
    "pydantic>=2.12.5",
    "gdown>=5.2.1",
    "dataclass-wizard",
    "dotenv>=0.9.9",
    "ruff>=0.14.11",
    "scikit-image>=0.25.2",
    "pycocotools>=2.0.11",
    "graphviz>=0.21",
]

[project.optional-dependencies]

dev = [
    "ipykernel",
    "jupyterlab",
    "ruff",
    "mypy>=1.0.0",
    "types-protobuf>=5.29.2",
    "types-PyYAML>=6.0.0",
    "pytest",
    "pytest-cov",
    "ipympl>=0.9.8",
    "ipdb>=0.13.13",
    "psutil",
    # Security and packaging tools
    "twine>=6.2.0",
    "pip-audit>=2.7.0",
    "bandit[toml]>=1.7.0",
    "detect-secrets>=1.4.0",
    "pip-licenses>=4.0.0",
    "cyclonedx-bom>=4.0.0",
]


test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "pytest-mock>=3.10.0",
    "pytest-asyncio>=0.21.0",
]

[project.urls]
Homepage = "https://www.cubert-hyperspectral.com/"
Repository = "https://github.com/cubert-hyperspectral/cuvis-ai-core"
Documentation = "https://github.com/cubert-hyperspectral/cuvis-ai-core/tree/main/docs"
Issues = "https://github.com/cubert-hyperspectral/cuvis-ai-core/issues"
Changelog = "https://github.com/cubert-hyperspectral/cuvis-ai-core/blob/main/CHANGELOG.md"

[project.scripts]
restore-pipeline = "cuvis_ai_core.utils.restore:restore_pipeline_cli"
restore-trainrun = "cuvis_ai_core.utils.restore:restore_trainrun_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["cuvis_ai_core"]

[tool.black]
line-length = 88
target-version = ['py311']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.11"
# Relaxed type checking - gradually increase strictness over time
check_untyped_defs = false
disallow_untyped_defs = false
disallow_incomplete_defs = false
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true

# Exclude auto-generated and problematic modules
[[tool.mypy.overrides]]
module = "cuvis_ai_core.grpc.v1.*"
ignore_errors = true

[[tool.mypy.overrides]]
module = "cuvis_ai_core.grpc.*"
ignore_errors = true

[tool.ruff]
target-version = "py311"
line-length = 88
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "build",
    "dist",
    "*.egg-info",
]

[tool.interrogate]
ignore-init-method = true
ignore-init-module = false
ignore-magic = false
ignore-semiprivate = false
ignore-private = false
ignore-property-decorators = false
ignore-module = false
ignore-nested-functions = false
ignore-nested-classes = true
ignore-setters = false
fail-under = 80
exclude = ["cuvis_ai_core/grpc/v1"]
verbose = 1

[tool.bandit]
exclude_dirs = ["tests", "cuvis_ai_core/grpc/v1"]
skips = ["B101"]

[tool.setuptools_scm]
version_scheme = "post-release"
local_scheme = "node-and-date"

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchvision = { index = "pytorch-cu128" }
